--- a/package.json
+++ b/package.json
@@ -65,12 +65,13 @@
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
-    "eslint-plugin-react": "^7.22.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.2.1"
   }
 }
