--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-scrollbars-custom": "^4.0.25",
     "react-sortable-pane": "^1.1.0",
     "sass": "^1.32.5",
     "ts-node": "^9.1.1",
@@ -65,12 +64,13 @@
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
-    "eslint-plugin-react": "^7.22.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
